<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageSMBShares">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


        <Button android:id="@+id/deleteSynchronisation"
            android:visibility="gone"
            android:text="@string/manage_smb_shares_delete_button_text"
            android:layout_gravity="right"
            android:background="@color/red"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:ignore="InefficientWeight">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/manage_smb_shares_introduction"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_smb_shares_saved_credentials_title"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"/>

        <TextView android:id="@+id/listViewLoader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/manage_smb_shares_loading_text"/>

        <ListView android:id="@+id/customListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            android:id="@+id/addSMBShare"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:text="@string/manage_smb_shares_add_button_text"
            android:padding="10dp" />

    </LinearLayout>

</LinearLayout>