<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SMBBrowser">

    <android.support.v7.widget.Toolbar
        android:id="@+id/SMBBrowserToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


        <Button android:id="@+id/SMBBrowserUpFolderButton"
            android:text="@string/smb_browser_folder_up_text"
            android:layout_gravity="right"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:clickable="false"
            android:layout_height="40dp" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:textStyle="bold"
            android:text="@string/smb_browser_path_prefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/SMBBrowserCurrentPath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

    <ListView android:id="@+id/SMBBrowserListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:ignore="InefficientWeight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            android:id="@+id/selectSMBFolder"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:text="@string/smb_browser_select_folder_text"
            android:padding="10dp" />

    </LinearLayout>


</LinearLayout>